corrected button outline causing menu shift on focus change

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -72,6 +72,7 @@ button.menu-item:focus {
     background-color: red !important;
     border: none;
     text-decoration: none;
+    outline: none;
 }
 
 .invisble {
